argocd/kustomize/gatewayapi/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: ingress
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: argocd-http
      allowedRoutes:
        namespaces:
          from: All
